--- a/template.ejs
+++ b/template.ejs
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700,900" rel="stylesheet">
     <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
+</head>
 
-  <body>
-    <div id="root"></div>
-    <script src="/bundle.js"></script>
-  </body>
+<body>
+<div id="root"></div>
+<script src="/bundle.js"></script>
+</body>
 </html>
 
 
