--- a/template.ejs
+++ b/template.ejs
@@ -11,6 +11,7 @@
 <body>
 <div id="root"></div>
 <script src="/bundle.js"></script>
+<script src="https://use.fontawesome.com/9f9daca276.js"></script>
 </body>
 </html>
 
