--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -2,6 +2,7 @@
   box-sizing: border-box;
 }
 
+$gray: rgba(34,34,34,0.5);
 $border-colour: #CCC;
 $secondary-colour: #2875C7;
 $spacing: 10px;
@@ -18,6 +19,7 @@ $header-height: 40px;
 .calendar-container {
   width: 310px;
   font-family: 'Roboto', sans-serif;
+  box-shadow: rgba(0, 0, 0, 0.247059) 0 14px 45px, rgba(0, 0, 0, 0.219608) 0 10px 18px;
   flex-direction: column;
   display: flex;
 }
@@ -30,9 +32,41 @@ $header-height: 40px;
   align-items: center;
   color: #FFF;
 
+  &__year {
+    opacity: .8;
+  }
+
   &__date {
+    display: flex;
     font-size: 24px;
     font-weight: 500;
+    span {
+      padding: 0 3px;
+    }
+  }
+}
+
+.calendar-body {
+
+  &__month {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__icon {
+    cursor: pointer;
+    padding: 0 10px;
+    font-size: 25px;
+  }
+}
+
+.calendar-weeks {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  &__day {
+    color: $gray;
   }
 }
 
@@ -86,143 +120,3 @@ $header-height: 40px;
   }
 
 }
-
-.week {
-  float: left;
-  width: 100%;
-  border-top: solid 1px $border-colour;
-
-  &:first-child {
-    border-top: none;
-  }
-
-  .day {
-    float: left;
-    width: 15%;
-    @extend .border-box;
-    border-left: solid 1px $border-colour;
-    font-size: 0.75em;
-    text-align: center;
-    @include vertical-centre(30px);
-    background: white;
-    cursor: pointer;
-    color: black;
-
-    &:first-child {
-      border-left: none;
-    }
-
-    &.today {
-      background: #E3F2FF;
-    }
-
-    &.different-month {
-      color: #C0C0C0;
-    }
-
-    &.selected {
-      background: $secondary-colour;
-      color: white;
-    }
-  }
-
-  &.names > span {
-    color: $secondary-colour;
-    font-weight: bold;
-  }
-}
-
-//.calendar {
-//  float:left;
-//  display:block;
-//  background:white;
-//  width:300px;
-//  border:solid 1px $border-colour;
-//  margin-bottom:10px;
-//  @extend .border-box;
-//
-//  > div.header {
-//      float:left;
-//      width:100%;
-//      background: $secondary-colour;
-//      height: $header-height;
-//      color:white;
-//
-//    >i {
-//      float:left;
-//      width:$icon-width;
-//      font-size:1.125em;
-//      font-weight:bold;
-//      position:relative;
-//      @extend .border-box;
-//      padding:0 $spacing;
-//      cursor:pointer;
-//    }
-//
-//    >i.fa-angle-left {
-//      text-align:left;
-//    }
-//
-//    >i.fa-angle-right {
-//      text-align:right;
-//      margin-left:$icon-width*-1;
-//    }
-//
-//    >span {
-//      float:left;
-//      width:100%;
-//      font-weight:bold;
-//      text-transform:uppercase;
-//      @extend .border-box;
-//      padding-left:$icon-width+$spacing;
-//      margin-left:$icon-width*-1;
-//      text-align:center;
-//      padding-right:$icon-width;
-//      color:inherit;
-//    }
-//  }
-//  >div.week {
-//    float:left;
-//    width:100%;
-//    border-top:solid 1px $border-colour;
-//
-//    &:first-child {
-//      border-top:none;
-//    }
-//
-//    >span.day {
-//      float:left;
-//      width:100%/7;
-//      @extend .border-box;
-//      border-left:solid 1px $border-colour;
-//      font-size:0.75em;
-//      text-align:center;
-//      @extend .vertical-centre(30px);
-//      background:white;
-//      cursor:pointer;
-//      color:black;
-//
-//      &:first-child {
-//        border-left:none;
-//      }
-//
-//      &.today {
-//        background:#E3F2FF;
-//      }
-//
-//      &.different-month {
-//        color:#C0C0C0;
-//      }
-//
-//      &.selected {
-//        background:$secondary-colour;
-//        color:white;
-//      }
-//    }
-//
-//    &.names>span {
-//      color:$secondary-colour;
-//      font-weight:bold;
-//    }
-//  }
-//}
