--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -3,18 +3,7 @@
 }
 
 $gray: rgba(34,34,34,0.5);
-$border-colour: #CCC;
-$secondary-colour: #2875C7;
-$spacing: 10px;
-$icon-width: 40px;
-$header-height: 40px;
-
-@mixin vertical-centre($height) {
-  height: $height;
-  line-height: $height !important;
-  display: inline-block;
-  vertical-align: middle;
-}
+$green: rgb(0, 151, 167);
 
 .calendar-container {
   width: 310px;
@@ -25,7 +14,7 @@ $header-height: 40px;
 }
 
 .calendar-header {
-  background-color: rgb(0, 151, 167);
+  background-color: $green;
   padding: 10px;
   display: flex;
   flex-flow: wrap column;
@@ -47,7 +36,7 @@ $header-height: 40px;
 }
 
 .calendar-body {
-
+  padding-bottom: 15px;
   &__month {
     display: flex;
     justify-content: center;
@@ -67,56 +56,33 @@ $header-height: 40px;
   align-items: center;
   &__day {
     color: $gray;
+    text-align: center;
+    width: 40px;
   }
 }
 
-.calendar {
-  float: left;
-  display: block;
-  background: white;
-  width: 300px;
-  border: solid 1px $border-colour;
-  margin-bottom: 10px;
-  @extend .border-box;
-
-  .header {
-    float: left;
-    width: 100%;
-    background: $secondary-colour;
-    height: $header-height;
-    color: white;
-  }
-  i {
-    float: left;
-    width: $icon-width;
-    font-size: 1.125em;
-    font-weight: bold;
-    position: relative;
-    @extend .border-box;
-    padding: 0 $spacing;
+.calendar-days {
+  padding: 5px 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  &__day {
+    width: 31px;
     cursor: pointer;
+    padding: 5px 0;
+    position: relative;
+    display: flex;
+    border-radius: 20px;
+    justify-content: center;
+    transition: all 300ms cubic-bezier(0.68, 0.46, 0, 0.95) 0ms;
+    &:hover {
+      background-color: $green;
+      color: #FFF;
+    }
+    &._today {
+      background: $green;
+      color: #FFF;
+      border-radius: 20px;
+    }
   }
-
-  .fa-angle-left {
-    text-align: left;
-  }
-
-  .fa-angle-right {
-    text-align: right;
-    margin-left: $icon-width*-1;
-  }
-
-  span {
-    float: left;
-    width: 100%;
-    font-weight: bold;
-    text-transform: uppercase;
-    @extend .border-box;
-    padding-left: $icon-width+$spacing;
-    margin-left: $icon-width*-1;
-    text-align: center;
-    padding-right: $icon-width;
-    color: inherit;
-  }
-
 }
