--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -4,11 +4,12 @@
 
 $gray: rgba(34,34,34,0.5);
 $green: rgb(0, 151, 167);
+$shadow: rgba(0, 0, 0, 0.247059) 0 14px 45px, rgba(0, 0, 0, 0.219608) 0 10px 18px;
 
 .calendar-container {
   width: 310px;
   font-family: 'Roboto', sans-serif;
-  box-shadow: rgba(0, 0, 0, 0.247059) 0 14px 45px, rgba(0, 0, 0, 0.219608) 0 10px 18px;
+  box-shadow: $shadow;
   flex-direction: column;
   display: flex;
 }
