--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -80,10 +80,14 @@ $shadow: rgba(0, 0, 0, 0.247059) 0 14px 45px, rgba(0, 0, 0, 0.219608) 0 10px 18p
       background-color: $green;
       color: #FFF;
     }
-    &._today {
+    &._selected {
       background: $green;
-      color: #FFF;
+      color: #FFF !important;
       border-radius: 20px;
+    }
+
+    &._today {
+      color: rgb(0, 188, 212);
     }
   }
 
