--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -6,6 +6,14 @@ $gray: rgba(34,34,34,0.5);
 $green: rgb(0, 151, 167);
 $shadow: rgba(0, 0, 0, 0.247059) 0 14px 45px, rgba(0, 0, 0, 0.219608) 0 10px 18px;
 
+
+.reset-btn {
+  background: transparent;
+  border: none;
+  outline: none;
+}
+
+
 .calendar-container {
   width: 310px;
   font-family: 'Roboto', sans-serif;
@@ -48,6 +56,7 @@ $shadow: rgba(0, 0, 0, 0.247059) 0 14px 45px, rgba(0, 0, 0, 0.219608) 0 10px 18p
     cursor: pointer;
     padding: 0 10px;
     font-size: 25px;
+    @extend .reset-btn;
   }
 }
 
@@ -76,6 +85,7 @@ $shadow: rgba(0, 0, 0, 0.247059) 0 14px 45px, rgba(0, 0, 0, 0.219608) 0 10px 18p
     border-radius: 20px;
     justify-content: center;
     transition: all 300ms cubic-bezier(0.68, 0.46, 0, 0.95) 0ms;
+    @extend .reset-btn;
     &:hover {
       background-color: $green;
       color: #FFF;
