--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -48,15 +48,25 @@ $shadow: rgba(0, 0, 0, 0.247059) 0 14px 45px, rgba(0, 0, 0, 0.219608) 0 10px 18p
   padding-bottom: 15px;
   &__month {
     display: flex;
+		position: relative;
+		padding: 10px 0;
     justify-content: center;
     align-items: center;
   }
 
   &__icon {
     cursor: pointer;
+		top: 5px;
     padding: 0 10px;
     font-size: 25px;
+		position: absolute;
     @extend .reset-btn;
+		&._left {
+			left: 0;
+		}
+		&._right {
+			right: 0;
+		}
   }
 }
 
